[package]
edition = "2021"
name = "tmp1075"
version = "0.1.0"
description = "Platform-independent Rust driver for TMP1075 digital temperature sensor"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = { version = "1", optional = true }
embedded-hal-async = { version = "1", optional = true }
maybe-async-cfg = "0.2"

defmt = { version = "0.3", optional = true }

[features]
default = ["async"]
blocking = ["dep:embedded-hal"]
async = ["dep:embedded-hal-async"]
defmt = ["dep:defmt"]
